tests/Tuc/Fixtures/errors/UnknownPart.tuc
tuc parse error test
participants
    GenericService parts

basically whaterver here
